[package]
name = "graph-algorithms-rs"
description = "A collection of graph algorithms."
version = "0.1.3"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Slavik Pastushenko <slavpas@gmail.com>"]
exclude = [".github/**", "examples/**"]
documentation = "https://docs.rs/graph-algorithms-rs"
repository = "https://github.com/slavik-pastushenko/graph-algorithms-rs"

[lib]
name = "graph_algorithms"
path = "src/lib.rs"
