[package]
name = "graph-algorithms-rs"
description = "A collection of graph algorithms."
version = "0.1.4"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Slavik Pastushenko <slavpas@gmail.com>"]
exclude = [".github/**", "examples/**"]
documentation = "https://docs.rs/graph-algorithms-rs"
repository = "https://github.com/slavik-pastushenko/graph-algorithms-rs"

[features]
default = ["bellman_ford", "dijkstra"]
bellman_ford = []
dijkstra = []

[lib]
name = "graph_algorithms"
path = "src/lib.rs"
